--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "tom/hf-client",
+    "name": "newquery/hf-php-client-demo",
     "authors": [
         {
             "name": "newQuery",
